# bjc-eval

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: golden_seed.jsonl  reference_outputs.jsonl
src/swe_judge/: __init__.py  cli.py  prompts.py  reliability.py  runner.py  storage.py  tasks.py
src/swe_judge/judges/: __init__.py  anthropic.py  base.py  google.py  mock.py  openai.py
src/swe_judge/rubrics/: __init__.py  v1.py
tests/: conftest.py  test_anthropic_judge.py  test_google_judge.py  test_mock_judge.py  test_reliability.py  test_rubrics.py  test_runner.py  test_storage.py  test_tasks.py
