[project]
name = "swe-judge"
version = "0.1.1"
description = "Multi-judge LLM evaluation harness for software-engineering tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Benjamin Chang", email = "benjaminchang918@gmail.com" }
]
keywords = ["llm", "evaluation", "rubric", "judge-ensemble", "inspect-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
    "scikit-learn>=1.5",
    "simpledorff>=0.0.2",
    "pandas>=2.0",
    "ulid-py>=1.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
inspect = ["inspect-ai>=0.3.130"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
swe-judge = "swe_judge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swe_judge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=swe_judge --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
